# kedro-tf-utils

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pytest.yml
conf/base/: catalog.yml  parameters.yml
conf/base/parameters/: cnn_text_model.yml  embedding.yml  fusion.yml  model.yml  train.yml  train_mm_simple.yml
data/01_raw/: test_dataset.csv  test_report.csv
docs/source/: conf.py  index.rst
notebooks/: model-vis.ipynb
notes/: ISSUES.md  code.py  lstm.md  notes.md  serving.md
notes/old-train/: nodes.py
src/: requirements.txt  setup.py
src/kedro_tf_utils/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/kedro_tf_utils/extras/classes/: fusion_model.py
src/kedro_tf_utils/pipelines/cnn_text_model/: README.md  __init__.py  nodes.py  pipeline.py
src/kedro_tf_utils/pipelines/embedding/: README.md  __init__.py  nodes.py  pipeline.py
src/kedro_tf_utils/pipelines/fusion/: README.md  __init__.py  nodes.py  pipeline.py
src/kedro_tf_utils/pipelines/model/: README.md  __init__.py  nodes.py  pipeline.py
src/kedro_tf_utils/pipelines/train/: README.md  __init__.py  nodes.py  pipeline.py
src/kedro_tf_utils/pipelines/train_mm_simple/: README.md  __init__.py  nodes.py  pipeline.py
src/tests/: test_run.py
src/tests/pipelines/cnn_text_model/: test_pipeline.py
src/tests/pipelines/embedding/: test_pipeline.py
src/tests/pipelines/fusion/: test_pipeline.py
src/tests/pipelines/model/: test_pipeline.py
src/tests/pipelines/train/: test_pipeline.py
(+1 files in other folders)
